// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCredentialModal should call onSubmit with the correct filtered data when "Save" is clicked: onSubmit, filtered data 1`] = `
[
  [
    {
      "cred_type": "network",
      "name": "Test Credential",
    },
  ],
]
`;

exports[`AddCredentialModal should handle input changes correctly and match snapshot: Input change - name 1`] = `
<input
  aria-invalid="false"
  data-ouia-component-id="OUIA-Generated-TextInputBase-11"
  data-ouia-component-type="PF5/TextInput"
  data-ouia-safe="true"
  id="credential-name"
  name="name"
  placeholder="Enter a name for the credential"
  required=""
  type="text"
  value="Another Test Credential"
/>
`;

exports[`AddCredentialModal should match snapshot with the correct title: AddCredentialModal Title 1`] = `
<span
  class="pf-v5-c-modal-box__title-text"
>
  Add Credential: network
</span>
`;

exports[`CredentialFormFields renders the form correctly with "SSH Key" authType for network 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="name"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Name
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-21"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="credential-name"
          name="name"
          placeholder="Enter a name for the credential"
          required=""
          type="text"
          value="My Credential"
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="auth_type"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Authentication Type
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="pf-v5-c-menu-toggle pf-m-full-width"
        type="button"
      >
        <span
          class="pf-v5-c-menu-toggle__text"
        >
          SSH Key
        </span>
        <span
          class="pf-v5-c-menu-toggle__controls"
        >
          <span
            class="pf-v5-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="username"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Username
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-22"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="credential-username"
          name="username"
          placeholder="Enter username"
          required=""
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="ssh_key"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          SSH Key
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control pf-m-resize-both"
      >
        <textarea
          aria-invalid="false"
          id="credential-ssh-key"
          name="ssh_key"
          placeholder="Enter SSH Key"
          required=""
          rows="10"
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="become_method"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Become Method
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="pf-v5-c-menu-toggle pf-m-full-width"
        type="button"
      >
        <span
          class="pf-v5-c-menu-toggle__text"
        >
          Select option
        </span>
        <span
          class="pf-v5-c-menu-toggle__controls"
        >
          <span
            class="pf-v5-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="become_user"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Become User
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-23"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="become_user"
          name="become_user"
          placeholder="Enter become user (optional)"
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="become_password"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Become Password
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-24"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="become_password"
          name="become_password"
          placeholder="Enter become password (optional)"
          type="password"
          value=""
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CredentialFormFields renders the form correctly with "Token" authType for openshift 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="name"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Name
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-25"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="credential-name"
          name="name"
          placeholder="Enter a name for the credential"
          required=""
          type="text"
          value="My Credential"
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="auth_type"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Authentication Type
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="pf-v5-c-menu-toggle pf-m-full-width"
        type="button"
      >
        <span
          class="pf-v5-c-menu-toggle__text"
        >
          Token
        </span>
        <span
          class="pf-v5-c-menu-toggle__controls"
        >
          <span
            class="pf-v5-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="auth_token"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Token
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-26"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="credential-token"
          name="auth_token"
          placeholder="Enter Token"
          required=""
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CredentialFormFields renders the form correctly with "Username and Password" authType for network 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="name"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Name
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-16"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="credential-name"
          name="name"
          placeholder="Enter a name for the credential"
          required=""
          type="text"
          value="My Credential"
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="auth_type"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Authentication Type
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="pf-v5-c-menu-toggle pf-m-full-width"
        type="button"
      >
        <span
          class="pf-v5-c-menu-toggle__text"
        >
          Username and Password
        </span>
        <span
          class="pf-v5-c-menu-toggle__controls"
        >
          <span
            class="pf-v5-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="username"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Username
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-17"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="credential-username"
          name="username"
          placeholder="Enter username"
          required=""
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="password"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Password
        </span>
        <span
          aria-hidden="true"
          class="pf-v5-c-form__label-required"
        >
           *
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-18"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="credential-password"
          name="password"
          placeholder="Enter password"
          required=""
          type="password"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="become_method"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Become Method
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="pf-v5-c-menu-toggle pf-m-full-width"
        type="button"
      >
        <span
          class="pf-v5-c-menu-toggle__text"
        >
          Select option
        </span>
        <span
          class="pf-v5-c-menu-toggle__controls"
        >
          <span
            class="pf-v5-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="become_user"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Become User
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-19"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="become_user"
          name="become_user"
          placeholder="Enter become user (optional)"
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="become_password"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          Become Password
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <span
        class="pf-v5-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="OUIA-Generated-TextInputBase-20"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe="true"
          id="become_password"
          name="become_password"
          placeholder="Enter become password (optional)"
          type="password"
          value=""
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;
